fragmented country code to be more configurable

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
+SMS_AUTH_PROVIDER=
+SMS_TWILIO_API_KEY=
+
 SMS_INFOBIP_2FA_APP_ID=
 SMS_INFOBIP_2FA_MESSAGE_ID=
+
 SMS_INFOBIP_BASE_URL=
 SMS_INFOBIP_USERNAME=
 SMS_INFOBIP_PASSWORD=
@@ -13,4 +17,3 @@ SMS_TANGAZOLETU_USER_ID=
 
 SMS_ADMIN_EMAIL=
 SMS_COUNTRY_CODE=
-
